Some basic css introduced for form builder component (input, buttons, and text styles).

--- a/NgImForm/src/app/modules/form-builder/form-builder.component.html
+++ b/NgImForm/src/app/modules/form-builder/form-builder.component.html
@@ -1,5 +1,3 @@
-<div class="ng-im-form">
-  <p>
-    form-builder works!
-  </p>
-</div>
+<h1 class="ng-im-form-text-primary">
+  form-builder works!
+</h1>
