Bootstrap CDN added and project restructured (removed approuter module and routing)

--- a/NgImForm/src/app/app.component.html
+++ b/NgImForm/src/app/app.component.html
@@ -1,5 +1,1 @@
-<a [routerLink]="['/form-builder']">Form Builder</a>
-<br>
-<a [routerLink]="['/builded-form']">Builded Form</a>
-<br>
-<router-outlet></router-outlet>
+<app-form-builder></app-form-builder>
