--- a/NgImForm/src/app/modules/form-builder/form-builder.component.html
+++ b/NgImForm/src/app/modules/form-builder/form-builder.component.html
@@ -1,50 +1,66 @@
 <div class="m-3">
   <div class="card">
+    <div class="card-header">
+      <div class="d-flex justify-content-between">
+        <div>
+          <h3>Horizontal Form Generator</h3>
+        </div>
+        <div>
+          <button class="btn btn-success btn-sm me-1"><i class="fas fa-edit"></i> Properties</button>
+        </div>
+      </div>
+    </div>
+
     <div class="card-body">
-      <div class="mb-2">
-        <div class="card">
-          <div class="card-header">
-            <div class="d-flex justify-content-between">
-              <div>
-                <h3>Section Title</h3>
-                <small>Section Subtitle</small>
-              </div>
-              <div>
-                <button class="btn btn-success btn-sm me-1"><i class="fas fa-edit"></i> Properties</button>
-                <button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i> Remove</button>
+      <ng-container *ngFor="let section of horizontalForm.sections">
+        <div class="mb-2">
+          <div class="card">
+            <div class="card-header">
+              <div class="d-flex justify-content-between">
+                <div>
+                  <h3>{{section.title}}</h3>
+                  <small>{{section.subTitle}}</small>
+                </div>
+                <div>
+                  <button class="btn btn-success btn-sm me-1"><i class="fas fa-edit"></i> Section Properties</button>
+                  <button class="btn btn-danger btn-sm" (click)="removeSection(section.id)"><i class="fas fa-trash"></i>
+                    Remove
+                    Section</button>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="card-body">
-            <div class="card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-8">
-                    <div class="form-group">
-                      <label class="mb-1"><b>Input One*</b></label>
-                      <input type="text" class="form-control" placeholder="Input One" style="width: 100%;">
+            <div class="card-body">
+              <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-8">
+                      <div class="form-group">
+                        <label class="mb-1"><b>Input One*</b></label>
+                        <input type="text" class="form-control" placeholder="Input One" style="width: 100%;">
+                      </div>
                     </div>
-                  </div>
 
-                  <div class="col-4">
-                    <div class="d-flex align-items-end" style="height: 100%;">
-                      <button class="btn btn-success btn-sm me-1"><i class="fas fa-edit"></i> Properties</button>
-                      <button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i> Remove</button>
+                    <div class="col-4">
+                      <div class="d-flex align-items-end" style="height: 100%;">
+                        <button class="btn btn-success btn-sm me-1"><i class="fas fa-edit"></i> Properties</button>
+                        <button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i> Remove</button>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
 
-            <div class="mt-2 d-flex justify-content-end">
-              <button class="btn btn-primary btn-sm"><i class="fas fa-plus-circle"></i> Add Fields</button>
+              <div class="mt-2 d-flex justify-content-end">
+                <button class="btn btn-primary btn-sm"><i class="fas fa-plus-circle"></i> Add Fields</button>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </ng-container>
 
       <div class="d-flex justify-content-end">
-        <button class="btn btn-primary btn-sm"><i class="fas fa-plus-circle"></i> Add Section</button>
+        <button class="btn btn-primary btn-sm" (click)="addSection()"><i class="fas fa-plus-circle"></i> Add
+          Section</button>
       </div>
     </div>
   </div>
