--- a/NgImForm/src/app/modules/form-builder/form-builder.component.html
+++ b/NgImForm/src/app/modules/form-builder/form-builder.component.html
@@ -14,7 +14,7 @@
     <div class="card-body">
       <ng-container *ngFor="let section of horizontalForm.sections">
         <div class="mb-2">
-          <div class="card">
+          <div class="card bg-body-secondary">
             <div class="card-header">
               <div class="d-flex justify-content-between">
                 <div>
