--- a/NgImForm/src/app/modules/form-builder/form-builder.component.html
+++ b/NgImForm/src/app/modules/form-builder/form-builder.component.html
@@ -51,7 +51,8 @@
               </div>
 
               <div class="mt-2 d-flex justify-content-end">
-                <button class="btn btn-primary btn-sm"><i class="fas fa-plus-circle"></i> Add Fields</button>
+                <button class="btn btn-primary btn-sm" (click)="viewFieldSelectionSidePanel()"><i
+                    class="fas fa-plus-circle"></i> Add Fields</button>
               </div>
             </div>
           </div>
@@ -65,3 +66,6 @@
     </div>
   </div>
 </div>
+
+<app-field-selection-sidepanel *ngIf="isFieldSelectionSidePanelOpen"
+  (hidePanelEvent)="hideFieldSelectionSidePanel()"></app-field-selection-sidepanel>
