--- a/NgImForm/src/app/modules/form-builder/field-selection-sidepanel/field-selection-sidepanel.component.html
+++ b/NgImForm/src/app/modules/form-builder/field-selection-sidepanel/field-selection-sidepanel.component.html
@@ -12,14 +12,20 @@
     </div>
   </div>
   <div class="card-body sidebar-card-body">
-    <ng-container *ngFor="let field of fields">
-      <button type="button" class="m-1 btn btn-outline-success">{{field}}</button>
+    <ng-container *ngFor="let field of fields; let i = index">
+      <button type="button" class="m-1 btn"
+        [ngClass]="selectedIndex !== undefined ? i === selectedIndex ? 'btn-success' : 'btn-outline-success' :'btn-outline-success'"
+        (click)="select(i)">
+        <ng-container *ngIf="i === selectedIndex">
+          <i class="fas fa-check-circle"></i>
+        </ng-container>
+        {{field}}</button>
     </ng-container>
 
     <hr>
 
     <div class="d-flex justify-content-end">
-      <button class="btn btn-primary"><i class="fas fa-plus-circle"></i> Add</button>
+      <button class="btn btn-primary" (click)="add()"><i class="fas fa-plus-circle"></i> Add</button>
     </div>
   </div>
 </aside>
