--- a/NgImForm/src/app/modules/form-builder/form-builder.component.html
+++ b/NgImForm/src/app/modules/form-builder/form-builder.component.html
@@ -46,7 +46,9 @@
                         <div class="col-4">
                           <div class="d-flex align-items-end" style="height: 100%;">
                             <button class="btn btn-success btn-sm me-1"><i class="fas fa-edit"></i> Properties</button>
-                            <button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i> Remove</button>
+                            <button class="btn btn-danger btn-sm"
+                              (click)="removeField(element.type, section.id, element.textBoxComponent.id)"><i
+                                class="fas fa-trash"></i> Remove</button>
                           </div>
                         </div>
                       </div>
@@ -57,7 +59,7 @@
 
               <div class="mt-2 d-flex justify-content-end">
                 <button class="btn btn-primary btn-sm" (click)="viewFieldSelectionSidePanel(section.id)"><i
-                    class="fas fa-plus-circle"></i> Add Fields</button>
+                    class="fas fa-plus-circle"></i> Add Field</button>
               </div>
             </div>
           </div>
