--- a/NgImForm/src/app/modules/form-builder/section-properties-sidepanel/section-properties-sidepanel.component.html
+++ b/NgImForm/src/app/modules/form-builder/section-properties-sidepanel/section-properties-sidepanel.component.html
@@ -12,11 +12,20 @@
     </div>
   </div>
   <div class="card-body sidebar-card-body">
-    <form [formGroup]="form">
+    <form [formGroup]="form" (ngSubmit)="saveChanges()">
       <div class="form-horizontal">
+        <div class="form-group">
+          <span><b>Component ID:</b></span>
+          <span class="ms-1">{{sectionProperties?.properties?.id}}</span>
+        </div>
+        <hr>
+
         <div class="form-group mb-2">
           <label class="mb-1"><b>Title*</b></label>
           <input type="text" class="form-control" formControlName="title">
+          <small
+            *ngIf="isSubmitClicked && form.controls['title']?.errors && form.controls['title']?.errors?.['required']"
+            class="text-danger">Title is Required!</small>
         </div>
 
         <div class="form-group mb-2">
@@ -37,6 +46,13 @@
         <div class="form-group mb-2">
           <label class="mb-1"><b>Body Class</b></label>
           <input type="text" class="form-control" formControlName="bodyClass">
+        </div>
+        <hr>
+
+        <div class="form-group">
+          <div class="d-flex justify-content-end">
+            <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Save Changes</button>
+          </div>
         </div>
       </div>
     </form>
