--- a/NgImForm/src/app/modules/form-builder/form-builder.component.html
+++ b/NgImForm/src/app/modules/form-builder/form-builder.component.html
@@ -46,7 +46,9 @@
 
                         <div class="col-4">
                           <div class="d-flex align-items-end" style="height: 100%;">
-                            <button class="btn btn-success btn-sm me-1"><i class="fas fa-edit"></i> Properties</button>
+                            <button class="btn btn-success btn-sm me-1"
+                              (click)="viewTextBoxPropertiesSidePanel(section.id, element.textBoxComponent.id)"><i
+                                class="fas fa-edit"></i> Properties</button>
                             <button class="btn btn-danger btn-sm"
                               (click)="removeField(element.type, section.id, element.textBoxComponent.id)"><i
                                 class="fas fa-trash"></i> Remove</button>
@@ -81,3 +83,6 @@
 <app-section-properties-sidepanel *ngIf="isSectionPropertiesSidePanelOpen"
   [sectionProperties]="selectedForSectionPropertiesUpdate" (hidePanelEvent)="hideSectionPropertiesSidePanel()"
   (saveChangesEvent)="saveSectionProperties($event)"></app-section-properties-sidepanel>
+
+<app-textbox-properties-sidepanel *ngIf="isTextBoxPropertiesSidePanelOpen"
+  (hidePanelEvent)="hideTextBoxPropertiesSidePanel()"></app-textbox-properties-sidepanel>
