--- a/NgImForm/src/app/modules/form-builder/textbox-properties-sidepanel/textbox-properties-sidepanel.component.html
+++ b/NgImForm/src/app/modules/form-builder/textbox-properties-sidepanel/textbox-properties-sidepanel.component.html
@@ -86,46 +86,9 @@
           </div>
 
           <div class="form-group mb-2">
-            <label class="mb-1"><b>Message</b></label>
+            <label class="mb-1"><b>Required Message</b></label>
             <input type="text" class="form-control" formControlName="requiredMessage">
           </div>
-
-          <hr>
-          <ng-container formArrayName="inputValidations">
-            <div *ngFor="let inputValidation of inputValidations.controls; let i = index" class="row">
-              <ng-container [formGroupName]="i">
-                <div class="card m-2">
-                  <div class="card-body">
-                    <div class="form-group mb-2">
-                      <select class="form-control" formControlName="validationType">
-                        <option value="">Select Type</option>
-                        <option *ngFor="let buildInValidation of textBoxValidations"
-                          value="{{buildInValidation.value}}">
-                          {{buildInValidation.title}}</option>
-                      </select>
-                    </div>
-
-                    <div class="form-group mb-2">
-                      <input type="number" class="form-control" placeholder="Min">
-                    </div>
-
-                    <div class="form-group mb-2">
-                      <input type="number" class="form-control" placeholder="Max">
-                    </div>
-
-                    <div class="form-group mb-2">
-                      <input type="number" class="form-control" placeholder="Min Len">
-                    </div>
-
-                    <div class="form-group mb-2">
-                      <input type="number" class="form-control" placeholder="Max Len">
-                    </div>
-                  </div>
-                </div>
-              </ng-container>
-            </div>
-          </ng-container>
-          <hr>
 
           <div class="form-group mb-2">
             <label class="mb-1"><b>Regex Validation</b></label>
