--- a/NgImForm/src/app/modules/form-builder/form-builder.component.html
+++ b/NgImForm/src/app/modules/form-builder/form-builder.component.html
@@ -87,6 +87,31 @@
                     </div>
                   </div>
                 </ng-container>
+
+                <ng-container *ngIf="element.type === fields[2] && element.fileFieldComponent">
+                  <div class="card m-1">
+                    <div class="card-body">
+                      <div class="row">
+                        <div class="col-8">
+                          <div class="form-group">
+                            <label class="mb-1"><b>{{element.fileFieldComponent.label}}</b></label>
+                            <input type="file" class="{{element.fileFieldComponent.class}}" style="width: 100%;">
+                          </div>
+                        </div>
+
+                        <!-- (click)="viewTextAreaPropertiesSidePanel(section.id, element.textAreaComponent.id)" -->
+                        <div class="col-4">
+                          <div class="d-flex align-items-end" style="height: 100%;">
+                            <button class="btn btn-success btn-sm me-1"><i class="fas fa-edit"></i> Properties</button>
+                            <button class="btn btn-danger btn-sm"
+                              (click)="removeField(element.type, section.id, element.fileFieldComponent.id)"><i
+                                class="fas fa-trash"></i> Remove</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </ng-container>
               </ng-container>
 
               <div class="mt-2 d-flex justify-content-end">
