Selectbox add/remove done.

--- a/NgImForm/src/app/modules/form-builder/form-builder.component.html
+++ b/NgImForm/src/app/modules/form-builder/form-builder.component.html
@@ -113,6 +113,34 @@
                     </div>
                   </div>
                 </ng-container>
+
+                <ng-container *ngIf="element.type === fields[3] && element.selectBoxComponent">
+                  <div class="card m-1">
+                    <div class="card-body">
+                      <div class="row">
+                        <div class="col-8">
+                          <div class="form-group">
+                            <label class="mb-1"><b>{{element.selectBoxComponent.label}}</b></label>
+                            <select class="{{element.selectBoxComponent.class}}">
+                              <ng-container *ngIf="element.selectBoxComponent.placeholder">
+                                <option value="">{{element.selectBoxComponent.placeholder}}</option>
+                              </ng-container>
+                            </select>
+                          </div>
+                        </div>
+                        <!-- (click)="viewFileFieldPropertiesSidePanel(section.id, element.fileFieldComponent.id)" -->
+                        <div class="col-4">
+                          <div class="d-flex align-items-end" style="height: 100%;">
+                            <button class="btn btn-success btn-sm me-1"><i class="fas fa-edit"></i> Properties</button>
+                            <button class="btn btn-danger btn-sm"
+                              (click)="removeField(element.type, section.id, element.selectBoxComponent.id)"><i
+                                class="fas fa-trash"></i> Remove</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </ng-container>
               </ng-container>
 
               <div class="mt-2 d-flex justify-content-end">
