--- a/NgImForm/src/app/modules/form-builder/form-builder.component.html
+++ b/NgImForm/src/app/modules/form-builder/form-builder.component.html
@@ -121,17 +121,22 @@
                         <div class="col-8">
                           <div class="form-group">
                             <label class="mb-1"><b>{{element.selectBoxComponent.label}}</b></label>
-                            <select class="{{element.selectBoxComponent.class}}">
-                              <ng-container *ngIf="element.selectBoxComponent.placeholder">
-                                <option value="">{{element.selectBoxComponent.placeholder}}</option>
+                            <select class="{{element.selectBoxComponent.class}}"
+                              [multiple]="element.selectBoxComponent.isMultiple">
+                              <option *ngIf="element.selectBoxComponent.placeholder" value=""
+                                [selected]="!element.selectBoxComponent.isMultiple">
+                                {{element.selectBoxComponent.placeholder}}</option>
+                              <ng-container *ngFor="let option of element.selectBoxComponent.options">
+                                <option value="{{option.value}}" [selected]="option.selected">{{option.text}}</option>
                               </ng-container>
                             </select>
                           </div>
                         </div>
-                        <!-- (click)="viewFileFieldPropertiesSidePanel(section.id, element.fileFieldComponent.id)" -->
                         <div class="col-4">
                           <div class="d-flex align-items-end" style="height: 100%;">
-                            <button class="btn btn-success btn-sm me-1"><i class="fas fa-edit"></i> Properties</button>
+                            <button class="btn btn-success btn-sm me-1"
+                              (click)="viewSelectboxPropertiesSidePanel(section.id, element.selectBoxComponent.id)"><i
+                                class="fas fa-edit"></i> Properties</button>
                             <button class="btn btn-danger btn-sm"
                               (click)="removeField(element.type, section.id, element.selectBoxComponent.id)"><i
                                 class="fas fa-trash"></i> Remove</button>
@@ -178,3 +183,7 @@
 <app-filefield-properties-sidepanel *ngIf="isFileFieldPropertiesSidePanelOpen"
   [fileFieldProperties]="selectedForFileFieldPropertiesUpdate" (hidePanelEvent)="hideFileFieldPropertiesSidePanel()"
   (saveChangesEvent)="saveFileFieldProperties($event)"></app-filefield-properties-sidepanel>
+
+<app-selectbox-properties-sidepanel *ngIf="isSelectboxPropertiesSidePanelOpen"
+  [selectBoxProperties]="selectedForSelectboxPropertiesUpdate" (hidePanelEvent)="hideSelectboxPropertiesSidePanel()"
+  (saveChangesEvent)="saveSelectboxProperties($event)"></app-selectbox-properties-sidepanel>
