--- a/NgImForm/src/app/modules/form-builder/form-builder.component.html
+++ b/NgImForm/src/app/modules/form-builder/form-builder.component.html
@@ -177,29 +177,34 @@
                   </div>
                 </ng-container>
 
-                <ng-container *ngIf="element.type === fields[5] && element.radioButtonGroup">
+                <ng-container *ngIf="element.type === fields[5] && element.radioButtonGroupComponent">
                   <div class="card m-1">
                     <div class="card-body">
                       <div class="row">
                         <div class="col-8">
                           <div class="form-group">
-                            <ng-container *ngFor="let radioButton of element.radioButtonGroup.radioButtons">
-                              <div class="col-12 col-sm-12 col-md-3">
-                                <input type="radio" name="{{element.radioButtonGroup.name}}"
-                                  id="{{element.radioButtonGroup.id}}" [checked]="radioButton.checked"
-                                  value="{{radioButton.value}}">
-                                <span class="ms-1">{{radioButton.text}}</span>
-                              </div>
-                            </ng-container>
+                            <div class="row">
+                              <ng-container *ngFor="let radioButton of element.radioButtonGroupComponent.radioButtons">
+                                <div class="col-sm-12 col-md-3 col-lg-3">
+                                  <div class="form-group">
+                                    <input type="radio" name="{{element.radioButtonGroupComponent.name}}"
+                                      id="{{element.radioButtonGroupComponent.id}}" [checked]="radioButton.checked"
+                                      value="{{radioButton.value}}">
+                                    <span class="ms-1">{{radioButton.text}}</span>
+                                  </div>
+                                </div>
+                              </ng-container>
+                            </div>
                           </div>
                         </div>
 
-                        <!-- (click)="viewCheckboxPropertiesSidePanel(section.id, element.checkBoxComponent.id)" -->
                         <div class="col-4">
                           <div class="d-flex align-items-end" style="height: 100%;">
-                            <button class="btn btn-success btn-sm me-1"><i class="fas fa-edit"></i> Properties</button>
+                            <button class="btn btn-success btn-sm me-1"
+                              (click)="viewRadioButtonGroupPropertiesSidePanel(section.id, element.radioButtonGroupComponent.id)"><i
+                                class="fas fa-edit"></i> Properties</button>
                             <button class="btn btn-danger btn-sm"
-                              (click)="removeField(element.type, section.id, element.radioButtonGroup.id)"><i
+                              (click)="removeField(element.type, section.id, element.radioButtonGroupComponent.id)"><i
                                 class="fas fa-trash"></i> Remove</button>
                           </div>
                         </div>
@@ -252,3 +257,8 @@
 <app-checkbox-properties-sidepanel *ngIf="isCheckboxPropertiesSidePanelOpen"
   [checkboxProperties]="selectedForCheckboxPropertiesUpdate" (hidePanelEvent)="hideCheckboxPropertiesSidePanel()"
   (saveChangesEvent)="saveCheckboxProperties($event)"></app-checkbox-properties-sidepanel>
+
+<app-radio-button-group-properties-sidepanel *ngIf="isRadioButtonGroupPropertiesSidePanelOpen"
+  [radioButtonGroupProperties]="selectedForRadioButtonGroupPropertiesUpdate"
+  (hidePanelEvent)="hideRadioButtonGroupPropertiesSidePanel()"
+  (saveChangesEvent)="saveRadioButtonGroupProperties($event)"></app-radio-button-group-properties-sidepanel>
