--- a/NgImForm/src/app/modules/form-builder/form-builder.component.html
+++ b/NgImForm/src/app/modules/form-builder/form-builder.component.html
@@ -218,15 +218,36 @@
                     <div class="card-body">
                       <div class="row">
                         <div class="col-8">
-                          <img src="{{element.imageBoxComponent.url}}" alt="{{element.imageBoxComponent.alt}}"
-                            height="{{element.imageBoxComponent.height}}" width="{{element.imageBoxComponent.width}}"
-                            class="{{element.imageBoxComponent.class}}">
+                          <ng-container *ngIf="element.imageBoxComponent.alignment === alignments[0]">
+                            <div class="text-left">
+                              <img src="{{element.imageBoxComponent.url}}" alt="{{element.imageBoxComponent.alt}}"
+                                height="{{element.imageBoxComponent.height}}"
+                                width="{{element.imageBoxComponent.width}}" class="{{element.imageBoxComponent.class}}">
+                            </div>
+                          </ng-container>
+
+                          <ng-container *ngIf="element.imageBoxComponent.alignment === alignments[1]">
+                            <div class="text-end">
+                              <img src="{{element.imageBoxComponent.url}}" alt="{{element.imageBoxComponent.alt}}"
+                                height="{{element.imageBoxComponent.height}}"
+                                width="{{element.imageBoxComponent.width}}" class="{{element.imageBoxComponent.class}}">
+                            </div>
+                          </ng-container>
+
+                          <ng-container *ngIf="element.imageBoxComponent.alignment === alignments[2]">
+                            <div class="text-center">
+                              <img src="{{element.imageBoxComponent.url}}" alt="{{element.imageBoxComponent.alt}}"
+                                height="{{element.imageBoxComponent.height}}"
+                                width="{{element.imageBoxComponent.width}}" class="{{element.imageBoxComponent.class}}">
+                            </div>
+                          </ng-container>
                         </div>
 
-                        <!-- (click)="viewRadioButtonGroupPropertiesSidePanel(section.id, element.radioButtonGroupComponent.id)" -->
                         <div class="col-4">
                           <div class="d-flex align-items-end" style="height: 100%;">
-                            <button class="btn btn-success btn-sm me-1"><i class="fas fa-edit"></i> Properties</button>
+                            <button class="btn btn-success btn-sm me-1"
+                              (click)="viewImageboxPropertiesSidePanel(section.id, element.imageBoxComponent.id)"><i
+                                class="fas fa-edit"></i> Properties</button>
                             <button class="btn btn-danger btn-sm"
                               (click)="removeField(element.type, section.id, element.imageBoxComponent.id)"><i
                                 class="fas fa-trash"></i> Remove</button>
@@ -286,3 +307,7 @@
   [radioButtonGroupProperties]="selectedForRadioButtonGroupPropertiesUpdate"
   (hidePanelEvent)="hideRadioButtonGroupPropertiesSidePanel()"
   (saveChangesEvent)="saveRadioButtonGroupProperties($event)"></app-radio-button-group-properties-sidepanel>
+
+<app-imagebox-properties-sidepanel *ngIf="isImageboxPropertiesSidePanelOpen"
+  [imageboxProperties]="selectedForImageboxPropertiesUpdate" (hidePanelEvent)="hideImageboxPropertiesSidePanel()"
+  (saveChangesEvent)="saveImageboxProperties($event)"></app-imagebox-properties-sidepanel>
